engine/language/generated/CapabilityDSLParser.cpp

// Generated from C:/Users/yacin/src/capability-breakpoints/engine/language/CapabilityDSL.g4 by ANTLR 4.13.2



#include "CapabilityDSLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CapabilityDSLParserStaticData final {
  CapabilityDSLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CapabilityDSLParserStaticData(const CapabilityDSLParserStaticData&) = delete;
  CapabilityDSLParserStaticData(CapabilityDSLParserStaticData&&) = delete;
  CapabilityDSLParserStaticData& operator=(const CapabilityDSLParserStaticData&) = delete;
  CapabilityDSLParserStaticData& operator=(CapabilityDSLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag capabilitydslParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CapabilityDSLParserStaticData> capabilitydslParserStaticData = nullptr;

void capabilitydslParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (capabilitydslParserStaticData != nullptr) {
    return;
  }
#else
  assert(capabilitydslParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CapabilityDSLParserStaticData>(
    std::vector<std::string>{
      "ruleExpr", "apiCall", "apiName", "apiArgs", "apiArg", "argExpr", 
      "memExpr", "memDereference", "patternExpr", "patternElems", "patternElem", 
      "hexList", "intList", "primary", "primaryVal"
    },
    std::vector<std::string>{
      "", "'('", "')'", "','", "'['", "']'", "'@'", "':'", "'*'", "", "", 
      "", "", "'\\u003F'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "AND", "OR", "THEN", "NOT", "WILDCARD", 
      "HEX_INT", "INT", "IDENTIFIER", "STRING", "COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  capabilitydslParserStaticData = std::move(staticData);
}

}

CapabilityDSLParser::CapabilityDSLParser(TokenStream *input) : CapabilityDSLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CapabilityDSLParser::CapabilityDSLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CapabilityDSLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *capabilitydslParserStaticData->atn, capabilitydslParserStaticData->decisionToDFA, capabilitydslParserStaticData->sharedContextCache, options);
}

CapabilityDSLParser::~CapabilityDSLParser() {
  delete _interpreter;
}

const atn::ATN& CapabilityDSLParser::getATN() const {
  return *capabilitydslParserStaticData->atn;
}

std::string CapabilityDSLParser::getGrammarFileName() const {
  return "CapabilityDSL.g4";
}

const std::vector<std::string>& CapabilityDSLParser::getRuleNames() const {
  return capabilitydslParserStaticData->ruleNames;
}

const dfa::Vocabulary& CapabilityDSLParser::getVocabulary() const {
  return capabilitydslParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CapabilityDSLParser::getSerializedATN() const {
  return capabilitydslParserStaticData->serializedATN;
}


//----------------- RuleExprContext ------------------------------------------------------------------

CapabilityDSLParser::RuleExprContext::RuleExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CapabilityDSLParser::RuleExprContext::getRuleIndex() const {
  return CapabilityDSLParser::RuleRuleExpr;
}

void CapabilityDSLParser::RuleExprContext::copyFrom(RuleExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ParentNodeContext ------------------------------------------------------------------

CapabilityDSLParser::RuleExprContext* CapabilityDSLParser::ParentNodeContext::ruleExpr() {
  return getRuleContext<CapabilityDSLParser::RuleExprContext>(0);
}

CapabilityDSLParser::ParentNodeContext::ParentNodeContext(RuleExprContext *ctx) { copyFrom(ctx); }


//----------------- ThenNodeContext ------------------------------------------------------------------

std::vector<CapabilityDSLParser::RuleExprContext *> CapabilityDSLParser::ThenNodeContext::ruleExpr() {
  return getRuleContexts<CapabilityDSLParser::RuleExprContext>();
}

CapabilityDSLParser::RuleExprContext* CapabilityDSLParser::ThenNodeContext::ruleExpr(size_t i) {
  return getRuleContext<CapabilityDSLParser::RuleExprContext>(i);
}

tree::TerminalNode* CapabilityDSLParser::ThenNodeContext::THEN() {
  return getToken(CapabilityDSLParser::THEN, 0);
}

CapabilityDSLParser::ThenNodeContext::ThenNodeContext(RuleExprContext *ctx) { copyFrom(ctx); }


//----------------- AndNodeContext ------------------------------------------------------------------

std::vector<CapabilityDSLParser::RuleExprContext *> CapabilityDSLParser::AndNodeContext::ruleExpr() {
  return getRuleContexts<CapabilityDSLParser::RuleExprContext>();
}

CapabilityDSLParser::RuleExprContext* CapabilityDSLParser::AndNodeContext::ruleExpr(size_t i) {
  return getRuleContext<CapabilityDSLParser::RuleExprContext>(i);
}

tree::TerminalNode* CapabilityDSLParser::AndNodeContext::AND() {
  return getToken(CapabilityDSLParser::AND, 0);
}

CapabilityDSLParser::AndNodeContext::AndNodeContext(RuleExprContext *ctx) { copyFrom(ctx); }


//----------------- CallNodeContext ------------------------------------------------------------------

CapabilityDSLParser::ApiCallContext* CapabilityDSLParser::CallNodeContext::apiCall() {
  return getRuleContext<CapabilityDSLParser::ApiCallContext>(0);
}

CapabilityDSLParser::CallNodeContext::CallNodeContext(RuleExprContext *ctx) { copyFrom(ctx); }


//----------------- OrNodeContext ------------------------------------------------------------------

std::vector<CapabilityDSLParser::RuleExprContext *> CapabilityDSLParser::OrNodeContext::ruleExpr() {
  return getRuleContexts<CapabilityDSLParser::RuleExprContext>();
}

CapabilityDSLParser::RuleExprContext* CapabilityDSLParser::OrNodeContext::ruleExpr(size_t i) {
  return getRuleContext<CapabilityDSLParser::RuleExprContext>(i);
}

tree::TerminalNode* CapabilityDSLParser::OrNodeContext::OR() {
  return getToken(CapabilityDSLParser::OR, 0);
}

CapabilityDSLParser::OrNodeContext::OrNodeContext(RuleExprContext *ctx) { copyFrom(ctx); }



CapabilityDSLParser::RuleExprContext* CapabilityDSLParser::ruleExpr() {
   return ruleExpr(0);
}

CapabilityDSLParser::RuleExprContext* CapabilityDSLParser::ruleExpr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CapabilityDSLParser::RuleExprContext *_localctx = _tracker.createInstance<RuleExprContext>(_ctx, parentState);
  CapabilityDSLParser::RuleExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 0;
  enterRecursionRule(_localctx, 0, CapabilityDSLParser::RuleRuleExpr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(36);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CapabilityDSLParser::T__0: {
        _localctx = _tracker.createInstance<ParentNodeContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(31);
        match(CapabilityDSLParser::T__0);
        setState(32);
        ruleExpr(0);
        setState(33);
        match(CapabilityDSLParser::T__1);
        break;
      }

      case CapabilityDSLParser::IDENTIFIER: {
        _localctx = _tracker.createInstance<CallNodeContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(35);
        apiCall();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(49);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(47);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<AndNodeContext>(_tracker.createInstance<RuleExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleRuleExpr);
          setState(38);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(39);
          match(CapabilityDSLParser::AND);
          setState(40);
          ruleExpr(4);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<OrNodeContext>(_tracker.createInstance<RuleExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleRuleExpr);
          setState(41);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(42);
          match(CapabilityDSLParser::OR);
          setState(43);
          ruleExpr(3);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<ThenNodeContext>(_tracker.createInstance<RuleExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleRuleExpr);
          setState(44);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(45);
          match(CapabilityDSLParser::THEN);
          setState(46);
          ruleExpr(2);
          break;
        }

        default:
          break;
        } 
      }
      setState(51);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ApiCallContext ------------------------------------------------------------------

CapabilityDSLParser::ApiCallContext::ApiCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CapabilityDSLParser::ApiCallContext::getRuleIndex() const {
  return CapabilityDSLParser::RuleApiCall;
}

void CapabilityDSLParser::ApiCallContext::copyFrom(ApiCallContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ApiWithArgsContext ------------------------------------------------------------------

CapabilityDSLParser::ApiNameContext* CapabilityDSLParser::ApiWithArgsContext::apiName() {
  return getRuleContext<CapabilityDSLParser::ApiNameContext>(0);
}

CapabilityDSLParser::ApiArgsContext* CapabilityDSLParser::ApiWithArgsContext::apiArgs() {
  return getRuleContext<CapabilityDSLParser::ApiArgsContext>(0);
}

CapabilityDSLParser::ApiWithArgsContext::ApiWithArgsContext(ApiCallContext *ctx) { copyFrom(ctx); }


CapabilityDSLParser::ApiCallContext* CapabilityDSLParser::apiCall() {
  ApiCallContext *_localctx = _tracker.createInstance<ApiCallContext>(_ctx, getState());
  enterRule(_localctx, 2, CapabilityDSLParser::RuleApiCall);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<CapabilityDSLParser::ApiWithArgsContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(52);
    apiName();
    setState(53);
    match(CapabilityDSLParser::T__0);
    setState(54);
    apiArgs();
    setState(55);
    match(CapabilityDSLParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ApiNameContext ------------------------------------------------------------------

CapabilityDSLParser::ApiNameContext::ApiNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CapabilityDSLParser::ApiNameContext::getRuleIndex() const {
  return CapabilityDSLParser::RuleApiName;
}

void CapabilityDSLParser::ApiNameContext::copyFrom(ApiNameContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IdentifierNameContext ------------------------------------------------------------------

tree::TerminalNode* CapabilityDSLParser::IdentifierNameContext::IDENTIFIER() {
  return getToken(CapabilityDSLParser::IDENTIFIER, 0);
}

CapabilityDSLParser::IdentifierNameContext::IdentifierNameContext(ApiNameContext *ctx) { copyFrom(ctx); }


CapabilityDSLParser::ApiNameContext* CapabilityDSLParser::apiName() {
  ApiNameContext *_localctx = _tracker.createInstance<ApiNameContext>(_ctx, getState());
  enterRule(_localctx, 4, CapabilityDSLParser::RuleApiName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<CapabilityDSLParser::IdentifierNameContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(CapabilityDSLParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ApiArgsContext ------------------------------------------------------------------

CapabilityDSLParser::ApiArgsContext::ApiArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CapabilityDSLParser::ApiArgsContext::getRuleIndex() const {
  return CapabilityDSLParser::RuleApiArgs;
}

void CapabilityDSLParser::ApiArgsContext::copyFrom(ApiArgsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ArgListContainerContext ------------------------------------------------------------------

std::vector<CapabilityDSLParser::ApiArgContext *> CapabilityDSLParser::ArgListContainerContext::apiArg() {
  return getRuleContexts<CapabilityDSLParser::ApiArgContext>();
}

CapabilityDSLParser::ApiArgContext* CapabilityDSLParser::ArgListContainerContext::apiArg(size_t i) {
  return getRuleContext<CapabilityDSLParser::ApiArgContext>(i);
}

CapabilityDSLParser::ArgListContainerContext::ArgListContainerContext(ApiArgsContext *ctx) { copyFrom(ctx); }


CapabilityDSLParser::ApiArgsContext* CapabilityDSLParser::apiArgs() {
  ApiArgsContext *_localctx = _tracker.createInstance<ApiArgsContext>(_ctx, getState());
  enterRule(_localctx, 6, CapabilityDSLParser::RuleApiArgs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<CapabilityDSLParser::ArgListContainerContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(59);
    apiArg();
    setState(64);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CapabilityDSLParser::T__2) {
      setState(60);
      match(CapabilityDSLParser::T__2);
      setState(61);
      apiArg();
      setState(66);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ApiArgContext ------------------------------------------------------------------

CapabilityDSLParser::ApiArgContext::ApiArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CapabilityDSLParser::ArgExprContext* CapabilityDSLParser::ApiArgContext::argExpr() {
  return getRuleContext<CapabilityDSLParser::ArgExprContext>(0);
}


size_t CapabilityDSLParser::ApiArgContext::getRuleIndex() const {
  return CapabilityDSLParser::RuleApiArg;
}


CapabilityDSLParser::ApiArgContext* CapabilityDSLParser::apiArg() {
  ApiArgContext *_localctx = _tracker.createInstance<ApiArgContext>(_ctx, getState());
  enterRule(_localctx, 8, CapabilityDSLParser::RuleApiArg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 184338) != 0)) {
      setState(67);
      argExpr(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgExprContext ------------------------------------------------------------------

CapabilityDSLParser::ArgExprContext::ArgExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CapabilityDSLParser::ArgExprContext::getRuleIndex() const {
  return CapabilityDSLParser::RuleArgExpr;
}

void CapabilityDSLParser::ArgExprContext::copyFrom(ArgExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ArgOrContext ------------------------------------------------------------------

std::vector<CapabilityDSLParser::ArgExprContext *> CapabilityDSLParser::ArgOrContext::argExpr() {
  return getRuleContexts<CapabilityDSLParser::ArgExprContext>();
}

CapabilityDSLParser::ArgExprContext* CapabilityDSLParser::ArgOrContext::argExpr(size_t i) {
  return getRuleContext<CapabilityDSLParser::ArgExprContext>(i);
}

tree::TerminalNode* CapabilityDSLParser::ArgOrContext::OR() {
  return getToken(CapabilityDSLParser::OR, 0);
}

CapabilityDSLParser::ArgOrContext::ArgOrContext(ArgExprContext *ctx) { copyFrom(ctx); }


//----------------- PrimaryValueContext ------------------------------------------------------------------

CapabilityDSLParser::PrimaryValContext* CapabilityDSLParser::PrimaryValueContext::primaryVal() {
  return getRuleContext<CapabilityDSLParser::PrimaryValContext>(0);
}

CapabilityDSLParser::PrimaryValueContext::PrimaryValueContext(ArgExprContext *ctx) { copyFrom(ctx); }


//----------------- MemMatchContext ------------------------------------------------------------------

CapabilityDSLParser::MemExprContext* CapabilityDSLParser::MemMatchContext::memExpr() {
  return getRuleContext<CapabilityDSLParser::MemExprContext>(0);
}

CapabilityDSLParser::MemMatchContext::MemMatchContext(ArgExprContext *ctx) { copyFrom(ctx); }


//----------------- ArgNotContext ------------------------------------------------------------------

tree::TerminalNode* CapabilityDSLParser::ArgNotContext::NOT() {
  return getToken(CapabilityDSLParser::NOT, 0);
}

CapabilityDSLParser::ArgExprContext* CapabilityDSLParser::ArgNotContext::argExpr() {
  return getRuleContext<CapabilityDSLParser::ArgExprContext>(0);
}

CapabilityDSLParser::ArgNotContext::ArgNotContext(ArgExprContext *ctx) { copyFrom(ctx); }


//----------------- ArgParenContext ------------------------------------------------------------------

CapabilityDSLParser::ArgExprContext* CapabilityDSLParser::ArgParenContext::argExpr() {
  return getRuleContext<CapabilityDSLParser::ArgExprContext>(0);
}

CapabilityDSLParser::ArgParenContext::ArgParenContext(ArgExprContext *ctx) { copyFrom(ctx); }



CapabilityDSLParser::ArgExprContext* CapabilityDSLParser::argExpr() {
   return argExpr(0);
}

CapabilityDSLParser::ArgExprContext* CapabilityDSLParser::argExpr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CapabilityDSLParser::ArgExprContext *_localctx = _tracker.createInstance<ArgExprContext>(_ctx, parentState);
  CapabilityDSLParser::ArgExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, CapabilityDSLParser::RuleArgExpr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(79);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ArgParenContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(71);
      match(CapabilityDSLParser::T__0);
      setState(72);
      argExpr(0);
      setState(73);
      match(CapabilityDSLParser::T__1);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ArgNotContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(75);
      match(CapabilityDSLParser::NOT);
      setState(76);
      argExpr(4);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<MemMatchContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(77);
      memExpr(0);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<PrimaryValueContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(78);
      primaryVal();
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(86);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<ArgOrContext>(_tracker.createInstance<ArgExprContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleArgExpr);
        setState(81);

        if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
        setState(82);
        match(CapabilityDSLParser::OR);
        setState(83);
        argExpr(4); 
      }
      setState(88);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- MemExprContext ------------------------------------------------------------------

CapabilityDSLParser::MemExprContext::MemExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CapabilityDSLParser::MemExprContext::getRuleIndex() const {
  return CapabilityDSLParser::RuleMemExpr;
}

void CapabilityDSLParser::MemExprContext::copyFrom(MemExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MemParenContext ------------------------------------------------------------------

CapabilityDSLParser::MemExprContext* CapabilityDSLParser::MemParenContext::memExpr() {
  return getRuleContext<CapabilityDSLParser::MemExprContext>(0);
}

CapabilityDSLParser::MemParenContext::MemParenContext(MemExprContext *ctx) { copyFrom(ctx); }


//----------------- MemAndContext ------------------------------------------------------------------

std::vector<CapabilityDSLParser::MemExprContext *> CapabilityDSLParser::MemAndContext::memExpr() {
  return getRuleContexts<CapabilityDSLParser::MemExprContext>();
}

CapabilityDSLParser::MemExprContext* CapabilityDSLParser::MemAndContext::memExpr(size_t i) {
  return getRuleContext<CapabilityDSLParser::MemExprContext>(i);
}

tree::TerminalNode* CapabilityDSLParser::MemAndContext::AND() {
  return getToken(CapabilityDSLParser::AND, 0);
}

CapabilityDSLParser::MemAndContext::MemAndContext(MemExprContext *ctx) { copyFrom(ctx); }


//----------------- MemOrContext ------------------------------------------------------------------

std::vector<CapabilityDSLParser::MemExprContext *> CapabilityDSLParser::MemOrContext::memExpr() {
  return getRuleContexts<CapabilityDSLParser::MemExprContext>();
}

CapabilityDSLParser::MemExprContext* CapabilityDSLParser::MemOrContext::memExpr(size_t i) {
  return getRuleContext<CapabilityDSLParser::MemExprContext>(i);
}

tree::TerminalNode* CapabilityDSLParser::MemOrContext::OR() {
  return getToken(CapabilityDSLParser::OR, 0);
}

CapabilityDSLParser::MemOrContext::MemOrContext(MemExprContext *ctx) { copyFrom(ctx); }


//----------------- MemNotContext ------------------------------------------------------------------

tree::TerminalNode* CapabilityDSLParser::MemNotContext::NOT() {
  return getToken(CapabilityDSLParser::NOT, 0);
}

CapabilityDSLParser::MemExprContext* CapabilityDSLParser::MemNotContext::memExpr() {
  return getRuleContext<CapabilityDSLParser::MemExprContext>(0);
}

CapabilityDSLParser::MemNotContext::MemNotContext(MemExprContext *ctx) { copyFrom(ctx); }


//----------------- MemLeafContext ------------------------------------------------------------------

CapabilityDSLParser::MemDereferenceContext* CapabilityDSLParser::MemLeafContext::memDereference() {
  return getRuleContext<CapabilityDSLParser::MemDereferenceContext>(0);
}

CapabilityDSLParser::MemLeafContext::MemLeafContext(MemExprContext *ctx) { copyFrom(ctx); }



CapabilityDSLParser::MemExprContext* CapabilityDSLParser::memExpr() {
   return memExpr(0);
}

CapabilityDSLParser::MemExprContext* CapabilityDSLParser::memExpr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CapabilityDSLParser::MemExprContext *_localctx = _tracker.createInstance<MemExprContext>(_ctx, parentState);
  CapabilityDSLParser::MemExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 12;
  enterRecursionRule(_localctx, 12, CapabilityDSLParser::RuleMemExpr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(97);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CapabilityDSLParser::T__0: {
        _localctx = _tracker.createInstance<MemParenContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(90);
        match(CapabilityDSLParser::T__0);
        setState(91);
        memExpr(0);
        setState(92);
        match(CapabilityDSLParser::T__1);
        break;
      }

      case CapabilityDSLParser::NOT: {
        _localctx = _tracker.createInstance<MemNotContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(94);
        match(CapabilityDSLParser::NOT);
        setState(95);
        memExpr(4);
        break;
      }

      case CapabilityDSLParser::T__3: {
        _localctx = _tracker.createInstance<MemLeafContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(96);
        memDereference();
        break;
      }
